--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "naive-ui": "^2.39.0",
     "plyr": "^3.7.8",
     "vue": "^3.4.31",
+    "vue-i18n": "^10.0.4",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
